--- a/package.json
+++ b/package.json
@@ -5,10 +5,10 @@
   "main": "src/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "clean": "rm dist/bundle.js",
+    "clean": "rm -f -r dist",
     "build-dev": "webpack -d --mode development",
-    "build-prod": "webpack -p --mode production",
-    "start": "webpack-dev-server --hot --mode development"
+    "build-prod": "webpack -p",
+    "start": "webpack-dev-server --open --hot --mode development"
   },
   "author": "",
   "license": "ISC",
@@ -23,6 +23,7 @@
     "@babel/preset-env": "^7.8.4",
     "@babel/preset-react": "^7.8.3",
     "babel-loader": "^8.0.6",
+    "html-webpack-plugin": "^3.2.0",
     "webpack": "^4.41.5",
     "webpack-cli": "^3.3.10",
     "webpack-dev-server": "^3.10.3"
