--- a/.babelrc
+++ b/.babelrc
@@ -1,9 +1,15 @@
 {
+  "browserslist": [
+    "last 1 version",
+    "not dead",
+    "> 1% in US"
+  ],
   "presets": [
     [
       "@babel/preset-env",
       {
-        "modules": false
+        "modules": false,
+        "useBuiltIns": "entry"
       }
     ],
     "@babel/preset-react"
