--- a/.babelrc
+++ b/.babelrc
@@ -1,9 +1,5 @@
 {
-  "browserslist": [
-    "last 1 version",
-    "not dead",
-    "> 1% in US"
-  ],
+  "browserslist": ["last 1 version", "not dead", "> 1% in US"],
   "presets": [
     [
       "@babel/preset-env",
@@ -14,5 +10,9 @@
     ],
     "@babel/preset-react"
   ],
-  "plugins": ["react-hot-loader/babel"]
+  "plugins": [
+    "react-hot-loader/babel",
+    "@babel/plugin-proposal-class-properties",
+    "@babel/plugin-syntax-dynamic-import"
+  ]
 }
