--- a/.babelrc
+++ b/.babelrc
@@ -1,15 +1,11 @@
 {
-  "browserslist": [
-    "last 1 version",
-    "not dead",
-    "> 1% in US"
-  ],
   "presets": [
     [
       "@babel/preset-env",
       {
         "modules": false,
-        "useBuiltIns": "entry"
+        "useBuiltIns": "entry",
+        "corejs": "3.6"
       }
     ],
     "@babel/preset-react"
