fix: eslint config

--- a/.eslintrc
+++ b/.eslintrc
@@ -3,7 +3,12 @@
   "env": {
     "browser": true
   },
-  "extends": ["airbnb", "plugin:prettier/recommended"],
+  "extends": [
+    "airbnb",
+    "prettier",
+    "prettier/react"
+  ],
+  "plugins": ["import", "jsx-a11y", "react", "react-hooks"],
   "rules": {
     "strict": 0
   }
