--- a/package.json
+++ b/package.json
@@ -8,6 +8,9 @@
     "clean": "rm -f -r dist",
     "build-dev": "webpack -d",
     "build-prod": "webpack -p",
+    "lint": "eslint './src/**/*.jsx'",
+    "lint:fix": "npm run lint -- --fix",
+    "format": "prettier --write '**/*.{js,jsx,json}'",
     "start": "webpack-dev-server --open --hot -d",
     "analyze": "webpack -p --env.analyze"
   },
@@ -17,14 +20,14 @@
     "lodash": "^4.17.15",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
-    "react-hot-loader": "^4.12.19"
+    "react-hot-loader": "^4.12.19",
+    "core-js": "^3.6.5",
+    "regenerator-runtime": "^0.13.7"
   },
   "devDependencies": {
     "@babel/core": "^7.8.4",
     "@babel/preset-env": "^7.8.4",
     "@babel/preset-react": "^7.8.3",
-    "core-js": "^3.6.5",
-    "regenerator-runtime": "^0.13.7",
     "babel-eslint": "^10.0.3",
     "babel-loader": "^8.0.6",
     "eslint": "^6.1.0",
