--- a/package.json
+++ b/package.json
@@ -18,11 +18,12 @@
   "license": "ISC",
   "dependencies": {
     "@babel/polyfill": "^7.8.3",
+    "core-js": "^3.6.5",
     "lodash": "^4.17.15",
+    "prop-types": "^15.7.2",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-hot-loader": "^4.12.19",
-    "core-js": "^3.6.5",
     "regenerator-runtime": "^0.13.7"
   },
   "devDependencies": {
