--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "clean": "rm -f -r dist",
     "build-dev": "webpack -d",
-    "build-prod": "webpack -p",
+    "build-prod": "webpack -p --env.NODE_ENV=production",
     "lint": "eslint './src/**/*.jsx'",
     "lint:fix": "npm run lint -- --fix",
     "format": "prettier --write '**/*.{js,jsx,json}'",
@@ -32,6 +32,7 @@
     "@babel/plugin-syntax-dynamic-import": "^7.8.3",
     "@babel/preset-env": "^7.8.4",
     "@babel/preset-react": "^7.8.3",
+    "autoprefixer": "^9.8.5",
     "babel-eslint": "^10.0.3",
     "babel-loader": "^8.0.6",
     "css-loader": "^4.0.0",
@@ -46,7 +47,9 @@
     "eslint-plugin-react-hooks": "^1.7.0",
     "file-loader": "^5.0.2",
     "html-webpack-plugin": "^3.2.0",
+    "mini-css-extract-plugin": "^0.9.0",
     "node-sass": "^4.14.1",
+    "postcss-loader": "^3.0.0",
     "prettier": "^1.19.1",
     "sass-loader": "^9.0.2",
     "style-loader": "^1.2.1",
